<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/MenuFavorite"
        android:icon="@drawable/ic_like"
        android:title="@string/favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/MenuSetting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/MenuProfile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>