<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg_main"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingTop="24dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tv_item_avatar"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/user1"
            app:layout_constraintStart_toStartOf="@+id/btnBack"
            app:layout_constraintTop_toBottomOf="@+id/btnBack" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_item_avatar"
            app:layout_constraintTop_toTopOf="@+id/tv_item_avatar" />

        <TextView
            android:id="@+id/tv_item_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/user_name"
            android:textColor="@color/grey_tv"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_avatar"
            app:layout_constraintStart_toStartOf="@+id/tv_item_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_avatar" />

        <LinearLayout
            android:id="@+id/statusVerified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/information_box"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name">

            <ImageView
                android:id="@+id/iconVerified"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:contentDescription="@string/verified"
                app:srcCompat="@drawable/checkmark" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/status"
                android:textColor="@color/grey_tv"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/information_box"
            android:contentDescription="@string/company"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/statusVerified"
            app:srcCompat="@drawable/business" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/companyValue"
            android:textColor="@color/grey_tv"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/information_box"
            android:contentDescription="@string/location"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/home" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/locationValue"
            android:textColor="@color/grey_tv"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/information_box"
            android:contentDescription="@string/repository"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/archive" />

        <TextView
            android:id="@+id/tv_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/repositoryValue"
            android:textColor="@color/grey_tv"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/tv_textRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/repoTV"
            android:textColor="@color/grey_tv"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/tv_repository"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/information_box"
            android:contentDescription="@string/repository"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/qrcode" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/id"
            android:textColor="@color/grey_tv"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/tvTextFollower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:text="@string/follower"
            android:textColor="@color/grey_tv"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/tvFollower"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_userName" />

        <TextView
            android:id="@+id/tvFollower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/information_box"
            android:fontFamily="@font/montserrat_regular"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/number"
            android:textColor="@color/grey_tv"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTextFollower"
            app:layout_constraintStart_toEndOf="@+id/tvTextFollower"
            app:layout_constraintTop_toTopOf="@+id/tvTextFollower" />


        <TextView
            android:id="@+id/tvTextFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:text="@string/following"
            android:textColor="@color/grey_tv"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvFollower"
            app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
            app:layout_constraintTop_toTopOf="@+id/tvFollower" />


        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/information_box"
            android:fontFamily="@font/montserrat_regular"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/number"
            android:textColor="@color/grey_tv"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTextFollowing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTextFollowing" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/grey_bg"
            app:layout_constraintTop_toBottomOf="@+id/tvTextFollower"
            app:tabTextColor="@android:color/white"
            tools:layout_editor_absoluteX="12dp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            tools:layout_editor_absoluteX="12dp" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="21dp"
            android:layout_height="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/favorite_toogle"
            android:focusable="false"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>