<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/grey_bg_main"
    android:padding="24dp"
    tools:context=".favorite.FavoriteFragment">

    <TextView
        android:id="@+id/title_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/title_one_setting"
        android:textAlignment="textStart"
        android:textColor="@color/grey_tv"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_one"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/title_two_setting"
        android:textColor="@color/grey_tv"
        android:textSize="46sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_one" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_marginTop="24dp"
        android:paddingVertical="4dp"
        android:paddingHorizontal="8dp"
        android:background="@drawable/information_box"
        android:id="@+id/sw_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_two"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/daily_reminder"
        android:textColor="@color/grey_tv"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_two" />
</androidx.constraintlayout.widget.ConstraintLayout>